# assistant_diplom

./: .env.example  .flake8  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
gateway/: nginx.conf
scripts/: check-01-infra.ps1  check-02-auth.ps1  (+12 more)
services/ugc/: .env.example  .flake8  .gitignore  README.md  docker-compose.yml  event.json  lint.txt  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt
services/ugc/.github/workflows/: ci.yml
services/ugc/research/: README.md
services/ugc/research/mongodb/: docker-compose.yml  requirements.txt
services/ugc/research/mongodb/scripts/: 01_generate_data.py  02_benchmark_reads.py  03_benchmark_realtime.py
services/ugc/research/postgres/: docker-compose.yml  requirements.txt
services/ugc/research/postgres/scripts/: 01_generate_data.py  02_benchmark_reads.py  03_benchmark_realtime.py
services/ugc/services/elk/filebeat/: filebeat.yml
services/ugc/services/elk/logstash/pipeline/: logstash.conf
services/ugc/services/nginx/: nginx.conf
services/ugc/services/ugc_api/: Dockerfile  requirements.txt
services/ugc/services/ugc_api/app/: auth.py  constants.py  db.py  deps.py  main.py  settings.py
services/ugc/services/ugc_api/app/models/: bookmark.py  common.py  like.py  review.py
services/ugc/services/ugc_api/app/repositories/: bookmarks_repo.py  likes_repo.py  reviews_repo.py
services/ugc/services/ugc_api/app/routers/: bookmarks.py  likes.py  reviews.py
services/ugc/tests/: conftest.py  test_bookmarks_crud.py  test_health.py  test_likes_crud.py  test_reviews_crud.py
(+120 files in other folders)
